# godot-toolbox

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  llms.txt  packs.manifest.json  pyproject.toml  upstreams.lock.json
templates/base/: .gitignore  .pre-commit-config.yaml  pyproject.toml
templates/base/godot/: project.godot.in
templates/base/godot/addons/gdUnit4/: plugin.gd.uid
templates/base/godot/addons/gdUnit4/src/: Comparator.gd.uid  Fuzzers.gd.uid  GdUnitArrayAssert.gd.uid  GdUnitAssert.gd.uid  GdUnitAwaiter.gd.uid  GdUnitBoolAssert.gd.uid  GdUnitConstants.gd.uid  GdUnitDictionaryAssert.gd.uid  GdUnitFailureAssert.gd.uid  GdUnitFileAssert.gd.uid  GdUnitFloatAssert.gd.uid  GdUnitFuncAssert.gd.uid  GdUnitGodotErrorAssert.gd.uid  GdUnitIntAssert.gd.uid  GdUnitObjectAssert.gd.uid  GdUnitResultAssert.gd.uid  GdUnitSceneRunner.gd.uid  GdUnitSignalAssert.gd.uid  GdUnitStringAssert.gd.uid  GdUnitTestSuite.gd.uid  GdUnitTuple.gd.uid  GdUnitValueExtractor.gd.uid  GdUnitVectorAssert.gd.uid
templates/base/godot/addons/gdUnit4/test/: GdUnitAwaiterTest.gd.uid  GdUnitScanTestSuitePerformanceTest.gd.uid  GdUnitScanTestSuiteTest.gd.uid  GdUnitTestCaseTimeoutTest.gd.uid  GdUnitTestCaseTimingTest.gd.uid  GdUnitTestResourceLoaderTest.gd.uid  GdUnitTestSuitePerformanceTest.gd.uid  GdUnitTestSuiteTest.gd.uid  (+1 more)
templates/base/godot/test/gdunit/: tooling_smoke_test.gd
templates/base/scripts/: autoload_name_check.py  gdscript_api_check.py  gdscript_toolkit_check.sh  gdscript_toolkit_format.sh  gdunit4_smoke.sh
(+634 files in other folders)
