[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "godot-toolbox-starter"
version = "0.1.0"
description = "Starter Godot project scaffolded from godot-toolbox"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "gdtoolkit==4.5.0",
    "pre-commit>=4,<5",
]

[tool.setuptools]
py-modules = []
